--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </div>
                         </div>
                     </div>
-                    <h2 class="b">6 Months Earlier...</h2>
+                    <h2 class="b">Beberapa hari kemudian...</h2>
                     <div class="row">
                         <div class="panel twothirds">
                             <div class="panel-text">
@@ -100,7 +100,7 @@
                         </div>
                         <div class="panel onethird">
                             <div class="panel-text">
-                                <p>Some content</p>
+                                <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
                             </div>
                         </div>
                     </div>
