--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                     <div class="row">
                         <div class="panel">
                             <div class="panel-text">
-                                <p>Some content</p>
+                                <p>
+                                    Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -115,14 +117,19 @@
                     <div class="row">
                         <div class="panel">
                             <div class="panel-text">
-                                <p>Some content</p>
+                                <p>
+                                    Di LP Cipinang, Sengkon bertemu dengan saudaranya Gunel yang menjadi tahanan dalam kasus pencurian pada 1980. Gunel mengaku dirinya lah yang telah merampok dan membunuh Sulaeman dan Siti Haya pada 1974 bersama tiga rekannya.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="panel half">
                             <div class="panel-text">
-                                <p>Some content</p>
+                                <p>
+                                    Atas pengakuan itu, Gunel cs divonis 12 tahun penjara atas kasus tersebut. Sengkon dan Karta melalui pengacara Albert Hasibuan mengakukan 
+                                    Peninjauan Kembali (PK) ke Mahkamah Agung.
+                                </p>
                             </div>
                         </div>
                         <div class="panel half">
