--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
                         Kisah Pilu 2 Petani Bojongsari
                     </h2>
                 </div>
-                <div class="bgbg">
-                    <img src="img/bgbg_.png" alt="">
+                <div id="container">
+                    <div class="bgbgss">
+                        <img
+                            src="img/petanivspolisi.png"
+                            alt="Bumper Crimestory"
+                            title="Bumper Crimestory"
+                            class="pic"
+                            id="pic"
+                        >
+                    </div>
                 </div>
                 <!-- <div class="wallpaper">
                     <div class="cek">
@@ -169,5 +177,8 @@
         </main>
         <script src="js/jquery-3.5.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="https://www.csslab.cl/ejemplos/timelinr/latest/js/jquery.timelinr-0.9.54.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
