--- a/index.html
+++ b/index.html
@@ -112,16 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="panel">
-                            <div class="panel-text">
-                                <p>
-                                    Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <h2 class="c">Kaboom!</h2>
+                    <h2 class="b">Dipenjara!</h2>
                     <div class="row">
                         <div class="panel">
                             <div class="panel-text">
@@ -142,31 +133,18 @@
                         </div>
                         <div class="panel half">
                             <div class="panel-text">
-                                <p>Some content</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="panel onethird">
-                            <div class="panel-text">
-                                <p>Some content</p>
-                            </div>
-                        </div>
-                        <div class="panel twothirds">
-                            <div class="panel-text">
-                                <p>Some content</p>
+                                <p>
+                                    Kepala Kejaksaan Negeri Bekasi Artomo Singodiredjo mengajukan schorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Mudjono dan Ketua Mahkamah Agung Umar Seno Adji.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="panel twothirds">
                             <div class="panel-text">
-                                <p>Some content</p>
-                            </div>
-                        </div>
-                        <div class="panel onethird">
-                            <div class="panel-text">
-                                <p>Some content</p>
+                                <p>
+                                    Sengkon dan Karta dibebaskan secara resmi pada 4 November 1980. Keduanya menderita TBC sejak mendekam di dalam penjara. Sengkon meninggal karena kecelakaan, sementara Karta meninggal dinia akibat TBC yang parah pada 1988.
+                                </p>
                             </div>
                         </div>
                     </div>
