--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                    <h2 class="b">Beberapa hari kemudian...</h2>
+                    <h2 class="b">Tertangkap</h2>
                     <div class="row">
                         <div class="panel twothirds">
                             <div class="panel-text">
