--- a/index.html
+++ b/index.html
@@ -29,23 +29,15 @@
                         >
                     </div>
                 </div>
-                <!-- <div class="wallpaper">
-                    <div class="cek">
-                        <img src="img/cek.png" alt="">
-                    </div>
-                    <div class="image image-petani image-petani-1">
-                        <img src="img/petani2.png" alt="">
-                    </div>
-                    <div class="image image-petani image-petani-2">
-                        <img src="img/petani1.png" alt="">
-                    </div>
-                    <div class="image image-petani image-polisi-1">
-                        <img src="img/polisi1.png" alt="">
-                    </div>
-                    <div class="image image-petani image-polisi-2">
-                        <img src="img/polisi2.png" alt="">
-                    </div>
-                </div> -->
+                <div class="container_mouse">
+                    <span class="mouse-btn">
+                        <span class="mouse-scroll"></span>
+                    </span>
+                    <span>
+                        <i>Scroll</i>
+                        kebawah
+                    </span>
+                </div>
             </section>
             <section class="pembukaan" hidden>
                 <div class="helpbg">
