--- a/index.html
+++ b/index.html
@@ -143,6 +143,27 @@
                 </div>
                 <!-- <a href="" class="button orange">To be Continued!</a>
                 <a href="" class="button gold">The End</a> -->
+                <div class="line-line"></div>
+            </section>
+            <section class="credit">
+                <div class="wrap-detikx">
+                    <div class="alls">
+                        <div class="jobs">Penulis</div>
+                        <div class="nama">M. Rizal Maslan</div>
+                    </div>
+                    <div class="alls">
+                        <div class="jobs">Editor</div>
+                        <div class="nama">Dieqy Hasbi Widhana</div>
+                    </div>
+                    <div class="alls">
+                        <div class="jobs">HTML</div>
+                        <div class="nama">Dedi Arief Wibisono</div>
+                    </div>
+                    <div class="alls">
+                        <div class="jobs">Ilustrasi</div>
+                        <div class="nama">Edi Wahyono</div>
+                    </div>
+                </div>
             </section>
         </main>
         <script src="js/jquery-3.5.1.min.js"></script>
