--- a/index.html
+++ b/index.html
@@ -87,89 +87,109 @@
                         </div>
                         <div class="panel half">
                             <div class="panel-text">
+                                <!-- <div class="detakx"> -->
+                                <svg
+                                    version="1.1"
+                                    id="Layer_1"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                                    x="0px"
+                                    y="0px"
+                                    viewBox="0 0 500 200"
+                                    style="enable-background:new 0 0 500 200;"
+                                    xml:space="preserve"
+                                >
+                                    <g>
+                                        <polyline class="ekg" points="486.6,113.8 328.2,113.8 310.3,132.3 296,70.7 246.8,127.4 241.6,120.2 233.9,166.4 227,27.6 
+                                                               213.2,118.3 211.8,112.3 205.1,126.1 198.2,108.5 194.1,124.4 184.5,92.9 174.1,113 4.3,113 	"></polyline>
+                                    </g>
+                                </svg>
                                 <p>Saat dirawat di RSCM, nyawa Sulaeman dan Siti tak tertolong. Keduanya meninggal dunia pada siang hari keesokan harinya. Atas pengakuan saksi-saksi tersebut, polisi menangkap dua petani Bojongsari, yaitu Sengkon dan Karta</p>
                             </div>
+                            <!-- </div> -->
                         </div>
-                    </div>
-                    <h2 class="b">Tertangkap</h2>
-                    <div class="row">
-                        <div class="panel twothirds">
-                            <div class="panel-text">
-                                <p> Sengkon dan Karta mengelak atas tuduhan tersebut. Keduanya tak berdaya ditekan dan konon mengalami penyiksaan secara fisik agar mengakui perampokan dan pembunuhan tersebut.</p>
+                        <h2 class="b">Tertangkap</h2>
+                        <div class="row">
+                            <div class="panel twothirds">
+                                <div class="panel-text">
+                                    <p> Sengkon dan Karta mengelak atas tuduhan tersebut. Keduanya tak berdaya ditekan dan konon mengalami penyiksaan secara fisik agar mengakui perampokan dan pembunuhan tersebut.</p>
+                                </div>
+                            </div>
+                            <div class="panel onethird">
+                                <div class="panel-text">
+                                    <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="panel onethird">
-                            <div class="panel-text">
-                                <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
+                        <h2 class="b">Dipenjara!</h2>
+                        <div class="row">
+                            <div class="panel">
+                                <div class="panel-text">
+                                    <p>
+                                        Di LP Cipinang, Sengkon bertemu dengan saudaranya Gunel yang menjadi tahanan dalam kasus pencurian pada 1980. Gunel mengaku dirinya lah yang telah merampok dan membunuh Sulaeman dan Siti Haya pada 1974 bersama tiga rekannya.
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <h2 class="b">Dipenjara!</h2>
-                    <div class="row">
-                        <div class="panel">
-                            <div class="panel-text">
-                                <p>
-                                    Di LP Cipinang, Sengkon bertemu dengan saudaranya Gunel yang menjadi tahanan dalam kasus pencurian pada 1980. Gunel mengaku dirinya lah yang telah merampok dan membunuh Sulaeman dan Siti Haya pada 1974 bersama tiga rekannya.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="panel half">
-                            <div class="panel-text">
-                                <p>
-                                    Atas pengakuan itu, Gunel cs divonis 12 tahun penjara atas kasus tersebut. Sengkon dan Karta melalui pengacara Albert Hasibuan mengakukan 
+                        <div class="row">
+                            <div class="panel half">
+                                <div class="panel-text">
+                                    <div class="image">
+                                        <img src="img/palu.png" alt="">
+                                    </div>
+                                    <p>
+                                        Atas pengakuan itu, Gunel cs divonis 12 tahun penjara atas kasus tersebut. Sengkon dan Karta melalui pengacara Albert Hasibuan mengakukan 
                                     Peninjauan Kembali (PK) ke Mahkamah Agung.
-                                </p>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="panel half">
+                                <div class="panel-text">
+                                    <p>
+                                        Kepala Kejaksaan Negeri Bekasi Artomo Singodiredjo mengajukan schorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Mudjono dan Ketua Mahkamah Agung Umar Seno Adji.
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="panel half">
-                            <div class="panel-text">
-                                <p>
-                                    Kepala Kejaksaan Negeri Bekasi Artomo Singodiredjo mengajukan schorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Mudjono dan Ketua Mahkamah Agung Umar Seno Adji.
-                                </p>
+                        <div class="row">
+                            <div class="panel twothirds">
+                                <div class="panel-text">
+                                    <p>
+                                        Sengkon dan Karta dibebaskan secara resmi pada 4 November 1980. Keduanya menderita TBC sejak mendekam di dalam penjara. Sengkon meninggal karena kecelakaan, sementara Karta meninggal dinia akibat TBC yang parah pada 1988.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="panel twothirds">
-                            <div class="panel-text">
-                                <p>
-                                    Sengkon dan Karta dibebaskan secara resmi pada 4 November 1980. Keduanya menderita TBC sejak mendekam di dalam penjara. Sengkon meninggal karena kecelakaan, sementara Karta meninggal dinia akibat TBC yang parah pada 1988.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- <a href="" class="button orange">To be Continued!</a>
+                    <!-- <a href="" class="button orange">To be Continued!</a>
                 <a href="" class="button gold">The End</a> -->
-                <div class="line-line"></div>
-            </section>
-            <section class="credit">
-                <div class="wrap-detikx">
-                    <div class="alls">
-                        <div class="jobs">Penulis</div>
-                        <div class="nama">M. Rizal Maslan</div>
+                    <div class="line-line"></div>
+                </section>
+                <section class="credit">
+                    <div class="wrap-detikx">
+                        <div class="alls">
+                            <div class="jobs">Penulis</div>
+                            <div class="nama">M. Rizal Maslan</div>
+                        </div>
+                        <div class="alls">
+                            <div class="jobs">Editor</div>
+                            <div class="nama">Dieqy Hasbi Widhana</div>
+                        </div>
+                        <div class="alls">
+                            <div class="jobs">HTML</div>
+                            <div class="nama">Dedi Arief Wibisono</div>
+                        </div>
+                        <div class="alls">
+                            <div class="jobs">Ilustrasi</div>
+                            <div class="nama">Edi Wahyono</div>
+                        </div>
                     </div>
-                    <div class="alls">
-                        <div class="jobs">Editor</div>
-                        <div class="nama">Dieqy Hasbi Widhana</div>
-                    </div>
-                    <div class="alls">
-                        <div class="jobs">HTML</div>
-                        <div class="nama">Dedi Arief Wibisono</div>
-                    </div>
-                    <div class="alls">
-                        <div class="jobs">Ilustrasi</div>
-                        <div class="nama">Edi Wahyono</div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <script src="js/jquery-3.5.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="https://www.csslab.cl/ejemplos/timelinr/latest/js/jquery.timelinr-0.9.54.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-        <script src="js/app.js"></script>
-    </body>
-</html>
+                </section>
+            </main>
+            <script src="js/jquery-3.5.1.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
+            <script src="https://www.csslab.cl/ejemplos/timelinr/latest/js/jquery.timelinr-0.9.54.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+            <script src="js/app.js"></script>
+        </body>
+    </html>
