--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                         <img src="img/palu.png" alt="">
                                     </div>
                                     <p>
-                                        Atas pengakuan itu, Gunel cs divonis 12 tahun penjara atas kasus tersebut. Sengkon dan Karta melalui pengacara Albert Hasibuan mengakukan 
+                                        Atas pengakuan itu, Gunel cs divonis 12 tahun penjara atas kasus tersebut. Sengkon dan Karta melalui pengacara Albert Hasibuan mengajukan 
                                     Peninjauan Kembali (PK) ke Mahkamah Agung.
                                     </p>
                                 </div>
