--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     <!-- <div class="penjara">
                                         <img src="img/penjara.png" alt="">
                                     </div> -->
-                                    <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
+                                    <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun penjara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
                                 </div>
                             </div>
                         </div>
