--- a/index.html
+++ b/index.html
@@ -39,28 +39,7 @@
                     </span>
                 </div>
             </section>
-            <section class="pembukaan" hidden>
-                <div class="helpbg">
-                    <img src="img/batasan.png" alt="">
-                </div>
-                <div class="wrap-detikx">
-                    <!-- <p class="firstletter">
-                        Perampokan dan pembunuhan terhadap Sulaeman dan Siti Haya membuat geger warga Kampung Bojongsari, Desa Jatiluhur, Kecamatan Pondok Gede, Bekasi pada 20 November 1974 dini hari. Pasangan suami-istri ini ditemukan bersimbah darah dengan penuh luka bacokan. Perhiasan kalung emas dan uang Rp 20.000 hilang.
-                    </p>
-               
-                    <p>
-                        Ketika Sulaeman dibawa ke Rumah Sakit Cipto Mangunkusumo (RSCM) Jakarta Pusat sempat berpesan kepada iparnya, Jatun. “Kalau saya tak ada umur, abang penasaran, tuntutlah Sengkon dan Karta,” ucapnya lirih.
-                    </p>
-                    <p>
-                        Saat dirawat di RSCM, nyawa Sulaeman dan Siti tak tertolong. Keduanya meninggal dunia pada siang hari keesokan harinya. Atas pengakuan saksi-saksi tersebut, polisi menangkap dua petani Bojongsari, yaitu Sengkon dan Karta
-                    </p>
-                    <p>
-                        Sengkon dan Karta mengelak atas tuduhan tersebut. Keduanya tak berdaya ditekan dan konon mengalami penyiksaan secara fisik agar mengakui perampokan dan pembunuhan tersebut.
-                    </p>
-                    <p>
-                        Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun pencara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak
-                    </p> --></div>
-            </section>
+           
             <section class="comic-wrapper">
                 <div class="helpbg">
                     <img src="img/batasan.png" alt="">
@@ -80,7 +59,8 @@
                     <div class="row">
                         <div class="panel half">
                             <div class="panel-text">
-                                <p>
+                                <div class="redlight"></div>
+                                <p class="totop">
                                     Ketika Sulaeman dibawa ke Rumah Sakit Cipto Mangunkusumo (RSCM) Jakarta Pusat sempat berpesan kepada iparnya, Jatun. “Kalau saya tak ada umur, abang penasaran, tuntutlah Sengkon dan Karta,” ucapnya lirih.
                                 </p>
                             </div>
