--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                     </span>
                 </div>
             </section>
-           
             <section class="comic-wrapper">
                 <div class="helpbg">
                     <img src="img/batasan.png" alt="">
@@ -91,15 +90,15 @@
                         <h2 class="b">Tertangkap!</h2>
                         <div class="row">
                             <div class="panel twothirds">
+                                <div class="polisi-tangkap">
+                                    <img src="img/tertangkap_1.png" alt="">
+                                </div>
                                 <div class="panel-text">
                                     <p> Sengkon dan Karta mengelak atas tuduhan tersebut. Keduanya tak berdaya ditekan dan konon mengalami penyiksaan secara fisik agar mengakui perampokan dan pembunuhan tersebut.</p>
                                 </div>
                             </div>
                             <div class="panel onethird">
                                 <div class="panel-text">
-                                    <!-- <div class="penjara">
-                                        <img src="img/penjara.png" alt="">
-                                    </div> -->
                                     <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun penjara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
                                 </div>
                             </div>
