--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                             <div class="panel-text">
                                 <p>Perampokan dan pembunuhan terhadap Sulaeman dan Siti Haya membuat geger warga Kampung Bojongsari, Desa Jatiluhur, Kecamatan Pondok Gede, Bekasi pada 20 November 1974 dini hari. Pasangan suami-istri ini ditemukan bersimbah darah dengan penuh luka bacokan. Perhiasan kalung emas dan uang Rp 20.000 hilang.</p>
                             </div>
+                            <div class="jejak">
+                                <img src="img/jejak.png" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -128,7 +131,7 @@
                             <div class="panel half">
                                 <div class="panel-text">
                                     <p>
-                                        Kepala Kejaksaan Negeri Bekasi Artomo Singodiredjo mengajukan schorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Mudjono dan Ketua Mahkamah Agung Umar Seno Adji.
+                                        Kepala Kejaksaan Negeri Bekasi Artomo Singodiredjo mengajukan skorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Mudjono dan Ketua Mahkamah Agung Umar Seno Adji.
                                     </p>
                                 </div>
                             </div>
