--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                                                213.2,118.3 211.8,112.3 205.1,126.1 198.2,108.5 194.1,124.4 184.5,92.9 174.1,113 4.3,113 	"></polyline>
                                     </g>
                                 </svg>
-                                <p>Saat dirawat di RSCM, nyawa Sulaeman dan Siti tak tertolong. Keduanya meninggal dunia pada siang hari keesokan harinya. Atas pengakuan saksi-saksi tersebut, polisi menangkap dua petani Bojongsari, yaitu Sengkon dan Karta</p>
+                                <p>Saat dirawat di RSCM, nyawa Sulaeman dan Siti tak tertolong. Keduanya meninggal dunia pada siang keesokan harinya. Atas pengakuan saksi-saksi tersebut, polisi menangkap dua petani Bojongsari, yaitu Sengkon dan Karta</p>
                             </div>
                             <!-- </div> -->
                         </div>
