--- a/index.html
+++ b/index.html
@@ -44,14 +44,25 @@
                     <img src="img/batasan.png" alt="">
                 </div>
                 <div class="wrap-detikx">
-                    <h2 class="a">
-                        <span>S</span>
-                        uatu Hari..
-                    </h2>
+                    <!-- <h2 class="a">
+                        <span>C</span>
+                        rimestory
+                    </h2> -->
+                    <div class="row pembuka">
+                        <div class="panel">
+                            <div class="panel-text">
+                                <p class="">
+                                    Dua petani miskin, Sengkon dan Karta harus menjalani prosesi di kursi pesakitan. Mereka disiksa untuk mengaku sebagai pelaku perampokan dan pembunuhan.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="panel">
                             <div class="panel-text">
-                                <p>Perampokan dan pembunuhan terhadap Sulaeman dan Siti Haya membuat geger warga Kampung Bojongsari, Desa Jatiluhur, Kecamatan Pondok Gede, Bekasi pada 20 November 1974 dini hari. Pasangan suami-istri ini ditemukan bersimbah darah dengan penuh luka bacokan. Perhiasan kalung emas dan uang Rp 20.000 hilang.</p>
+                                <p>
+                                    Dini hari itu warga geger. Terjadi perampokan dan pembunuhan di Kampung Bojongsari, Desa Jatiluhur, Kecamatan Pondok Gede, Bekasi. Peristiwa yang terjadi pada 20 November 1974 itu merenggut nyawa Sulaeman dan Siti Haya. Pasangan suami-istri ini ditemukan bersimbah darah dengan penuh luka bacokan. Perhiasan kalung emas dan uang Rp 20.000 hilang.
+                                </p>
                             </div>
                             <div class="jejak">
                                 <img src="img/jejak.png" alt="">
@@ -63,7 +74,7 @@
                             <div class="panel-text">
                                 <div class="redlight"></div>
                                 <p class="totop">
-                                    Ketika Sulaeman dibawa ke Rumah Sakit Cipto Mangunkusumo (RSCM) Jakarta Pusat sempat berpesan kepada iparnya, Jatun. “Kalau saya tak ada umur, abang penasaran, tuntutlah Sengkon dan Karta,” ucapnya lirih.
+                                    Ketika dibawa ke Rumah Sakit Cipto Mangunkusumo (RSCM) Jakarta Pusat, Sulaeman, sempat berpesan kepada iparnya, Jatun. “Kalau saya tak ada umur, abang penasaran, tuntutlah Sengkon dan Karta,” ucapnya lirih.
                                 </p>
                             </div>
                         </div>
@@ -86,7 +97,9 @@
                                                                213.2,118.3 211.8,112.3 205.1,126.1 198.2,108.5 194.1,124.4 184.5,92.9 174.1,113 4.3,113 	"></polyline>
                                     </g>
                                 </svg>
-                                <p>Saat dirawat di RSCM, nyawa Sulaeman dan Siti tak tertolong. Keduanya meninggal dunia pada siang keesokan harinya. Atas pengakuan saksi-saksi tersebut, polisi menangkap dua petani Bojongsari, yaitu Sengkon dan Karta</p>
+                                <p>
+                                    Saat dirawat di RSCM, nyawa Sulaeman dan Siti tak tertolong. Keduanya meninggal dunia pada siang hari keesokan harinya.
+                                </p>
                             </div>
                             <!-- </div> -->
                         </div>
@@ -97,12 +110,14 @@
                                     <img src="img/tertangkap_1.png" alt="">
                                 </div>
                                 <div class="panel-text">
-                                    <p> Sengkon dan Karta mengelak atas tuduhan tersebut. Keduanya tak berdaya ditekan dan konon mengalami penyiksaan secara fisik agar mengakui perampokan dan pembunuhan tersebut.</p>
+                                    <p> Atas pengakuan para saksi, polisi menangkap dua petani Bojongsari, yaitu Sengkon dan Karta. Mereka berdua mengelak atas tuduhan tersebut. Keduanya tak berdaya ditekan dan diduga mengalami penyiksaan secara fisik agar mengakui tindakan perampokan dan pembunuhan tersebut.</p>
                                 </div>
                             </div>
                             <div class="panel onethird">
                                 <div class="panel-text">
-                                    <p> Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun penjara oleh Pegadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan (LP) Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak</p>
+                                    <p>
+                                        Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun kurungan penjara oleh Pengadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +126,7 @@
                             <div class="panel">
                                 <div class="panel-text">
                                     <p>
-                                        Di LP Cipinang, Sengkon bertemu dengan saudaranya Gunel yang menjadi tahanan dalam kasus pencurian pada 1980. Gunel mengaku dirinya lah yang telah merampok dan membunuh Sulaeman dan Siti Haya pada 1974 bersama tiga rekannya.
+                                        Di LP Cipinang, Sengkon bertemu dengan saudaranya, Gunel, yang menjadi tahanan dalam kasus pencurian pada 1980. Gunel mengaku dirinya-lah yang telah merampok dan membunuh Sulaeman dan Siti Haya pada 1974 bersama tiga rekannya.
                                     </p>
                                 </div>
                             </div>
@@ -123,15 +138,14 @@
                                         <img src="img/palu.png" alt="">
                                     </div>
                                     <p>
-                                        Atas pengakuan itu, Gunel cs divonis 12 tahun penjara atas kasus tersebut. Sengkon dan Karta melalui pengacara Albert Hasibuan mengajukan 
-                                    Peninjauan Kembali (PK) ke Mahkamah Agung.
+                                        Atas pengakuan itu, Gunel Cs divonis 12 tahun penjara atas kasus tersebut. Lalu Sengkon dan Karta melalui pengacara Albert Hasibuan mengajukan peninjauan kembali ke Mahkamah Agung.
                                     </p>
                                 </div>
                             </div>
                             <div class="panel half">
                                 <div class="panel-text">
                                     <p>
-                                        Kepala Kejaksaan Negeri Bekasi Artomo Singodiredjo mengajukan skorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Mudjono dan Ketua Mahkamah Agung Umar Seno Adji.
+                                        Kepala Kejaksaan Negeri Bekasi Artomo Singodimedjo mengajukan skorsing (penundaan) kepada LP Cipinang agar Sengkon dan Karta dibebaskan terlebih dahulu pada 3 November 1980. Jaksa Agung Ali Said dengan maksud serupa juga mengirimkan surat kepada Menteri Kehakiman Moedjono dan Ketua Mahkamah Agung Umar Seno Adji.
                                     </p>
                                 </div>
                             </div>
@@ -140,7 +154,7 @@
                             <div class="panel twothirds">
                                 <div class="panel-text">
                                     <p>
-                                        Sengkon dan Karta dibebaskan secara resmi pada 4 November 1980. Keduanya menderita TBC sejak mendekam di dalam penjara. Sengkon meninggal karena kecelakaan, sementara Karta meninggal dinia akibat TBC yang parah pada 1988.
+                                        Sengkon dan Karta dibebaskan secara resmi pada 4 November 1980. Keduanya menderita TBC sejak mendekam di dalam penjara. Sengkon meninggal karena kecelakaan, sedangkan Karta meninggal dunia akibat TBC yang parah pada 1988.
                                     </p>
                                 </div>
                             </div>
@@ -174,7 +188,7 @@
             <script src="js/jquery-3.5.1.min.js"></script>
             <script src="js/bootstrap.min.js"></script>
             <script src="https://www.csslab.cl/ejemplos/timelinr/latest/js/jquery.timelinr-0.9.54.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
             <script src="js/app.js"></script>
         </body>
     </html>
