--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                             </div>
                             <div class="panel onethird">
                                 <div class="panel-text">
+                                    <div class="image">
+                                        <img src="img/palu.png" alt="">
+                                    </div>
                                     <p>
                                         Sengkon lalu divonis 12 tahun penjara dan Karta divonis 7 tahun kurungan penjara oleh Pengadilan Negeri Bekasi pada 1977. Keduanya lalu mendekam di sel tahanan Lembaga Pemasyarakatan Cipinang, Jakarta Timur. Sengkon mengajukan banding tapi ditolak.
                                     </p>
@@ -134,12 +137,12 @@
                         <div class="row">
                             <div class="panel half">
                                 <div class="panel-text">
-                                    <div class="image">
-                                        <img src="img/palu.png" alt="">
-                                    </div>
                                     <p>
                                         Atas pengakuan itu, Gunel Cs divonis 12 tahun penjara atas kasus tersebut. Lalu Sengkon dan Karta melalui pengacara Albert Hasibuan mengajukan peninjauan kembali ke Mahkamah Agung.
                                     </p>
+                                    <div class="image">
+                                        <img src="img/lawyers.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel half">
