--- a/content.html
+++ b/content.html
@@ -1,5 +1,8 @@
 <main>
     <section class="banner">
+        <div>
+            <h1>Sengkon dan Karta Kisah Pilu 2 Petani Bojongsari</h1>
+        </div>
         <div class="title">
             <h2>
                 Sengkon-Karta
@@ -34,6 +37,10 @@
             <img src="img/batasan.png" alt="">
         </div>
         <div class="wrap-detikx">
+            <!-- <h2 class="a">
+                <span>C</span>
+                rimestory
+            </h2> -->
             <div class="row pembuka">
                 <div class="panel">
                     <div class="panel-text">
@@ -80,7 +87,7 @@
                         >
                             <g>
                                 <polyline class="ekg" points="486.6,113.8 328.2,113.8 310.3,132.3 296,70.7 246.8,127.4 241.6,120.2 233.9,166.4 227,27.6 
-                                                               213.2,118.3 211.8,112.3 205.1,126.1 198.2,108.5 194.1,124.4 184.5,92.9 174.1,113 4.3,113 	"></polyline>
+                                                       213.2,118.3 211.8,112.3 205.1,126.1 198.2,108.5 194.1,124.4 184.5,92.9 174.1,113 4.3,113 	"></polyline>
                             </g>
                         </svg>
                         <p>
@@ -150,7 +157,7 @@
                 </div>
             </div>
             <!-- <a href="" class="button orange">To be Continued!</a>
-                <a href="" class="button gold">The End</a> -->
+        <a href="" class="button gold">The End</a> -->
             <div class="line-line"></div>
         </div>
     </section>
